--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=TEDAS-PC2324;initial catalog=Test;user id=saa;password=test;"
+  "ConnectionString": "Server=**-**;initial catalog=Test;user id=**;password=**;"
 }
